--- a/index.html
+++ b/index.html
@@ -1,81 +1,95 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <head>
-	<title>星月的小世界</title>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<style type="text/css">
-		@font-face {
-			font-family: digit;
-			src: url('digital-7_mono.ttf') format("truetype");
-		}
-	</style>
-	<link href="css/default.css" type="text/css" rel="stylesheet">
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/garden.js"></script>
+    <title>和兜兜的多少多少天</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <style type="text/css">
+        @font-face {
+            font-family: digit;
+            src: url('digital-7_mono.ttf') format("truetype");
+        }
+    </style>
+    <link href="css/default.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
 </head>
 
 <body>
-	<div id="mainDiv">
-		<div id="content">
-			<div id="code">
-				<br />
-				<br />
-				<div class="keyword">&nbsp;&nbsp;&nbsp;&nbsp;2016年元旦，第一次和你一起爬爬花山，第一次坐在你的身旁，第一次牵到你的手，第一次一起看电影，第一次一起吃华莱士。。。很幸运!这么多第一次在新年的一天发生了，更幸运的是得到你的芳心。</div><br /><br  /><br /><br  /><br />
-				<div class="keyword">&nbsp;&nbsp;&nbsp;&nbsp;一年过去了，和你经历了很多，越来越离不开你。憧憬着有你的未来是多么美好，一起旅游，一起健身，一起做做饼干，一起品尝每种美食，一起装饰我们的家，一起经历未来生活中的点点滴滴。。。</div>
-				
-				
-			</div>
-			<div id="loveHeart">
-				<canvas id="garden"></canvas>
-				<div id="words">
-					<div id="messages">
-						二傻子，我们已经相恋了
-						<div id="elapseClock"></div>
-					</div>
-					<div id="loveu">
-						&nbsp;&nbsp;&nbsp;&nbsp;山无棱,天地合,才敢与君绝<br/>
-						<div class="signature">熊炼</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="copyright">
-			 <a href='http://www.miibeian.gov.cn' target='_blank'>粤ICP备16108165号-1</a> Copyright © 2016  熊炼 2016-2019
-		</div>
-	</div>
-	<script type="text/javascript">
-		var offsetX = $("#loveHeart").width() / 2;
-		var offsetY = $("#loveHeart").height() / 2 - 55;
-		var together = new Date();
-		together.setFullYear(2016, 0, 1);
-		together.setHours(10);
-		together.setMinutes(0);
-		together.setSeconds(0);
-		together.setMilliseconds(0);
-		
-		if (!document.createElement('canvas').getContext) {
-			var msg = document.createElement("div");
-			msg.id = "errorMsg";
-			msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+"; 
-			document.body.appendChild(msg);
-			$("#code").css("display", "none")
-			$("#copyright").css("position", "absolute");
-			$("#copyright").css("bottom", "10px");
-		    document.execCommand("stop");
-		} else {
-			setTimeout(function () {
-				startHeartAnimation();
-			}, 5000);
+    <div id="mainDiv">
+        <div id="content">
+            <div id="code">
+                <span class="comments">兜兜：</span><br />
+                <span class="space" /><span class="comments">我会牵着你的手，走到我们满头白发的那一天</span><br />
+                <span class="space" /><span class="comments">我会守护你生命里的精彩，并陪伴你一路精彩下去。</span><br />
+                <span class="space" /><span class="comments">你的幸福快乐，是我一生的追求。</span><br />
+                <span class="space" />我会每一天带着笑脸，和你说早安，<br />
+                <span class="space" />我会每一晚与你道声晚安再入梦乡，<br />
+                <span class="space" />我会带你去所有你想去的地方，<br />
+                <span class="space" />陪你闹看你笑<br />
+                <span class="space" />历经你生命中所有的点点滴滴。<br />
+                <span class="space" />我期待这一生与你一起走过，<br />
+                <span class="space" />走到尽头再回头看尽一生铅华满地，<br />
+                <span class="space" />我期待与你慢慢变老，<br />
+                <span class="space" />等我们老到哪儿也去不了，<br />
+                <span class="space" />还能满载着一生的幸福快乐。<br />
+                <span class="keyword">我愿意爱你直到老去，<br />
+				<span class="space" />我会为我们的未来撑起一片天空，<br />
+				<span class="space" />为我们的将来担负起一生的责任，<br />
+				<span class="space" />愿意为你去做每一件能让你开心快乐的事。<br />
+				<span class="space" />所有我们经历的点点滴滴，<br />都是我们一辈子最美的回忆。</span> <br />
+                <br />
+            </div>
+            <div id="loveHeart">
+                <canvas id="garden"></canvas>
+                <div id="words">
+                    <div id="messages">
 
-			timeElapse(together);
-			setInterval(function () {
-				timeElapse(together);
-			}, 500);
+                        <div id="elapseClock"></div>
+                    </div>
+                    <div id="loveu">
+                        Love u forever and ever.<br/>
+                        <div class="signature">-梁皓烙</div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-			adjustCodePosition();
-			$("#code").typewriter();
-		}
-	</script>
+    </div>
+    <script type="text/javascript">
+        var offsetX = $("#loveHeart").width() / 2;
+        var offsetY = $("#loveHeart").height() / 2 - 55;
+        var together = new Date();
+        together.setFullYear(2019, 11, 24);
+        together.setHours(20);
+        together.setMinutes(0);
+        together.setSeconds(0);
+        together.setMilliseconds(0);
+
+        if (!document.createElement('canvas').getContext) {
+            var msg = document.createElement("div");
+            msg.id = "errorMsg";
+            msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
+            document.body.appendChild(msg);
+            $("#code").css("display", "none")
+            $("#copyright").css("position", "absolute");
+            $("#copyright").css("bottom", "10px");
+            document.execCommand("stop");
+        } else {
+            setTimeout(function() {
+                startHeartAnimation();
+            }, 5000);
+
+            timeElapse(together);
+            setInterval(function() {
+                timeElapse(together);
+            }, 500);
+
+            adjustCodePosition();
+            $("#code").typewriter();
+        }
+    </script>
 </body>
+
 </html>
